# v2rayR

./: README.md
.github/workflows/: build-and-release.yml  ci.yml
doc/: 功能分解.xmind
script/: build_ci.sh
user-end/: Cargo.toml  build.rs  config.toml
user-end/src/: config.rs  log.rs  main.rs  tray.rs  utils.rs  web_dist.rs
user-end/src/middleware/: handle_panic.rs  mod.rs  req_time.rs
user-end/src/service/: mod.rs  resp.rs  settings.rs
user-end/src/service/settings/: api.rs  mod.rs
web/: .env  index.html  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: Sidebar.jsx
web/src/pages/: Home.jsx  Settings.jsx
web/src/utils/: notification.js  request.jsx
