[package]
name = "v2ray_r"
version = "0.2.0"
edition = "2021"

## 这里的 `default-run` 字段设置了默认运行的二进制文件名
#default-run = "v2rayR"
#
#[[bin]]
#name = "v2rayR"
#path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = "0.3.30"
rust-embed = "8.4.0"
mime_guess = "2.0.4"
log = "0.4"
env_logger = "0.11.3"
futures = "0.3.30"
once_cell = "1.19.0"
termcolor = "1.4.1"
flate2 = "1.0.30"
chrono = "0.4.38"
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
systray = "0.4.0"
backtrace = "0.3.73"
tokio = "1.38.0"
encoding_rs = "0.8.34"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.117"
tar = "0.4.41"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.dev]
opt-level = 0

[profile.release]
lto = true        # 开启链接时优化 可以减小二进制体积并加快运行速度
strip = "symbols" # 使用strip剥离调试信息和符号信息
panic = "abort"   # 不保留崩溃时的堆栈信息

[build-dependencies]
winresource = "0.1.17"
chrono = "0.4.38"

[features]
gui = [] # 是否在windows系统中以gui模式运行（以gui模式运行时，不会跳出console黑框并展示输出）
## 指定默认的features
#default = ["gui"]